compiler/test/programs/syntax_error/reports_errors_in_several_nodes.fl
<?xml version="1.0" encoding="UTF-8"?>
<fluir xmlns:fl="FLUIR::LANGUAGE::SOURCE">
    <fl:function
        name="main"
        id="1"
        x="15"
        y="7"
        z="3"
        w="100"
        h="100">
        <body>
            <fl:binary
                id="1"
                x="0"
                y="20"
                z="2"
                w="7"
                h="7"
                lhs="2"
                rhs="3"
                operator="@" />
            <fl:constant
                id="2"
                x="0"
                y="10"
                z="2"
                w="5"
                h="5">
                <fl:float>I AM A STRING</fl:float>
            </fl:constant>
            <fl:constant
                id="3"
                x="0"
                y="10"
                z="3"
                h="5">
                <fl:float>THIS SHOULDN'T CAUSE AN ERROR</fl:float>
            </fl:constant>
        </body>
    </fl:function>
</fluir>
